# CDS-A5

./: CMakeLists.txt  README.md
data/: dataset.txt.ri  example.txt.bwt  example.txt.ri
src/: build.cpp  deserialize.cpp
